Add DetailsOpdracht view to Leerkracht

--- a/BreakOutBox/Views/Sessie/GroepKiezen.cshtml
+++ b/BreakOutBox/Views/Sessie/GroepKiezen.cshtml
@@ -78,8 +78,8 @@
         <div class="col-md-12 col-lg-6 mb-5">
             <h4>Spelregels lezen</h4>
             <p>Lees goed de spelregels door alvorens je start met het spel.</p>
-            <div id="pdfcontainer">
-                <object type="application/pdf" data="~/algemenepdfs/instructies.pdf" id="pdf"></object>
+            <div class="pdfcontainer">
+                <object type="application/pdf" data="~/algemenepdfs/instructies.pdf" class="pdf"></object>
             </div>
         </div>
     </div>
