--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -44,8 +44,8 @@
         <div class="col-md-12 col-lg-6 mb-5">
             <h4>Feedback</h4>
             <p>Dit is de theorie die bij de opdracht hoort. Lees deze grondig door tot je het begrijpt.</p>
-            <div id="pdfcontainer">
-                <object type="application/pdf" data="~/algemenepdfs/Theorie.pdf" id="pdf"></object>
+            <div class="pdfcontainer">
+                <object type="application/pdf" data="~/algemenepdfs/Theorie.pdf" class="pdf"></object>
             </div>
         </div>
     </div>
