--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -5,14 +5,14 @@
 
 <div class="container-fluid pt-4">
     <div class="row text-center">
-        <div class="col mb-4 inlin">
+        <div class="col mb-4">
             <h4 class="d-inline">@(Model.Opdracht.Oefening.Vak.Naam)</h4> <h2 class="d-inline ml-3 mr-3">@Model.Opdracht.Oefening.Naam</h2>
-            <form asp-action="SpelSpelen" asp-controller="Spel" class="d-inline" method="get">
+            <form asp-action="SpelSpelen" class="d-inline" method="get">
                 <button type="submit" class="btn btn-outline-primary btn-pill btn-sm d-inline sync"><i class="fas fa-sync-alt"></i></button>
             </form>
             <div class="progress progress-lg mt-3">
-                <div class="progress-bar" role="progressbar" style="width: @Model.PercentageVoltooid%"
-                     aria-valuenow="@Model.PercentageVoltooid" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: @(Model.PercentageVoltooid)%"
+                     aria-valuenow="@(Model.PercentageVoltooid)" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
     </div>
@@ -47,8 +47,8 @@
         </div>
         <div class="col-md-12 col-lg-6 mb-5">
             <h4>Opgave</h4>
-            <div id="pdfcontainer">
-                <object type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf"></object>
+            <div class="pdfcontainer">
+                <object type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" class="pdf"></object>
             </div>
         </div>
     </div>
