--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -1,21 +1,19 @@
-﻿@{
+﻿@model BreakOutBox.Models.SpelViewModels.SpelViewModel
+@{
     ViewData["Title"] = "Geblokkeerd!";
-}
-@section Head {
-    @*<meta http-equiv="refresh" content="8">*@
-    @*<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>*@
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 }
 
 <div class="container-fluid pt-4">
-    <div class="row">
-        <div class="col mb-4 text-center">
-            <h4 class="d-inline">Sessie</h4> <h2 class="d-inline ml-3 mr-3">@Model.Omschrijving</h2>
-            <form asp-action="GroepKiezen" asp-controller="Sessie" class="d-inline" method="get">
+    <div class="row text-center">
+        <div class="col mb-4">
+            <h4 class="d-inline">@(Model.Opdracht.Oefening.Vak.Naam)</h4> <h2 class="d-inline ml-3 mr-3">@Model.Opdracht.Oefening.Naam</h2>
+            <form asp-action="Feedback" class="d-inline" method="get">
                 <button type="submit" class="btn btn-outline-primary btn-pill btn-sm d-inline sync"><i class="fas fa-sync-alt"></i></button>
             </form>
+            <div class="progress progress-lg mt-3">
+                <div class="progress-bar" role="progressbar" style="width: @(Model.PercentageVoltooid)%"
+                     aria-valuenow="@(Model.PercentageVoltooid)" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
         </div>
     </div>
     <div class="row">
@@ -24,7 +22,7 @@
             {
                 <h4>Gedeblokkeerd</h4>
                 <p>Je groepje is gedeblokkeerd, jullie kunnen de opdracht opnieuw proberen.</p>
-                <form>
+                <form asp-action="Feedback" method="post">
                     <button type="submit" class="btn btn-primary">Terug naar opdracht</button>
                 </form>
             }
